<resources>
    <string name="app_name">FirstCalculator</string>
    <string name="equals_sign">=</string>
    <string name="plus_sign">+</string>
    <string name="multiply_sign">×</string>
    <string name="divide_sign">÷</string>
    <string name="minus_sign">-</string>
    <string name="point_sign">.</string>
    <string name="change_sign_sign">+/-</string>
    <string name="zero_sign">0</string>
    <string name="one_sign">1</string>
    <string name="two_sign">2</string>
    <string name="three_sign">3</string>
    <string name="four_sign">4</string>
    <string name="five_sign">5</string>
    <string name="six_sign">6</string>
    <string name="seven_sign">7</string>
    <string name="eight_sign">8</string>
    <string name="nine_sign">9</string>
    <string name="open_bracket_sing">(</string>
    <string name="close_bracket_sing">)</string>
    <string name="pi_sing">𝝿</string>
    <string name="pow_sing">^</string>
    <string name="rad_sing">RAD</string>
    <string name="deg_sing">DEG</string>
    <string name="sin_sing">sin</string>
    <string name="cos_sing">cos</string>
    <string name="tan_sing">tan</string>
    <string name="sec_sing">sec</string>
    <string name="csc_sing">csc</string>
    <string name="cot_sing">cot</string>
    <string name="ac_sing">AC</string>
    <string name="backspace_sing">⌫</string>
</resources>